--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -17,3 +17,25 @@ tasks:
     desc: Run gofumpt
     cmds:
       - gofumpt -w .
+
+  dev:
+    desc: Run with profiling enabled
+    env:
+      OPENCODE_PROFILE: true
+    cmds:
+      - go run .
+
+  profile:cpu:
+    desc: 10s CPU profile
+    cmds:
+      - go tool pprof -http :6061 'http://localhost:6060/debug/pprof/profile?seconds=10'
+
+  profile:heap:
+    desc: Heap profile
+    cmds:
+      - go tool pprof -http :6061 'http://localhost:6060/debug/pprof/heap'
+
+  profile:allocs:
+    desc: Allocations profile
+    cmds:
+      - go tool pprof -http :6061 'http://localhost:6060/debug/pprof/allocs'
