--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -10,7 +10,7 @@ metadata:
   homepage: "https://charm.sh/crush"
   description: "A powerful terminal-based AI assistant for developers, providing intelligent coding assistance directly in your terminal."
   maintainers:
-    - "kujtimiihoxha <kujtimii.h@gmail.com>"
+    - "kujtimiihoxha <kujtim@charm.sh>"
 
 builds:
   - env:
