--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -2,7 +2,7 @@ name: nightly
 
 on:
   schedule:
-    - cron: "0 0 * * 0" # every Sunday at midnight
+    - cron: "0 0 * * *" # every day at midnight
   workflow_dispatch: # allows manual triggering
 
 jobs:
