--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -10,3 +10,4 @@ jobs:
     uses: charmbracelet/meta/.github/workflows/nightly.yml@main
     secrets:
       goreleaser_key: ${{ secrets.GORELEASER_KEY }}
+      docker_token: "" # unused
