--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -10,4 +10,5 @@ jobs:
     uses: charmbracelet/meta/.github/workflows/nightly.yml@main
     secrets:
       goreleaser_key: ${{ secrets.GORELEASER_KEY }}
+      docker_username: "" # unused
       docker_token: "" # unused
