fix(ci): disable gomoddirectives linter

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -6,7 +6,7 @@ linters:
     # - goconst
     # - godot
     # - godox
-    - gomoddirectives
+    # - gomoddirectives
     - goprintffuncname
     # - gosec
     - misspell
