feat: add Arch Linux package support to nfpms
Enable archlinux format in nfpms configuration to generate
Arch Linux packages alongside existing deb and rpm packages.

💖 Generated with Crush
Co-Authored-By: Crush <noreply@crush.charm.land>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -115,6 +115,7 @@ nfpms:
   - formats:
       - deb
       - rpm
+      - archlinux
     file_name_template: "{{ .ConventionalFileName }}"
     contents:
       - src: ./completions/crush.bash
