ci(pro): nightly
Signed-off-by: Carlos Alexandro Becker <caarlos0@users.noreply.github.com>

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -25,6 +25,7 @@ jobs:
           fi
   nightly:
     needs: check
+    if: needs.check.outputs.should_run == 'true'
     uses: charmbracelet/meta/.github/workflows/nightly.yml@main
     secrets:
       goreleaser_key: ${{ secrets.GORELEASER_KEY }}
