ci: publish to npm
Signed-off-by: Carlos Alexandro Becker <caarlos0@users.noreply.github.com>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -111,6 +111,17 @@ homebrew_casks:
       owner: charmbracelet
       name: homebrew-tap
 
+npms:
+  - name: "@charmland/crush"
+    repository: "git+https://github.com/charmbracelet/crush.git"
+    bugs: https://github.com/charmbracelet/crush/issues
+    access: public
+    keywords:
+      - ai
+      - claude
+      - gpt
+      - ollama
+
 nfpms:
   - formats:
       - deb
