ci: publish to npm (#266)
* ci: publish to npm

Signed-off-by: Carlos Alexandro Becker <caarlos0@users.noreply.github.com>

* fix: job

* fix: drop keywords

Signed-off-by: Carlos Alexandro Becker <caarlos0@users.noreply.github.com>

---------

Signed-off-by: Carlos Alexandro Becker <caarlos0@users.noreply.github.com>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -111,6 +111,12 @@ homebrew_casks:
       owner: charmbracelet
       name: homebrew-tap
 
+npms:
+  - name: "@charmland/crush"
+    repository: "git+https://github.com/charmbracelet/crush.git"
+    bugs: https://github.com/charmbracelet/crush/issues
+    access: public
+
 nfpms:
   - formats:
       - deb
