--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -4,10 +4,10 @@ version: 2
 
 project_name: crush
 
-includes:
-  - from_url:
-      url: charmbracelet/meta/main/notarize.yaml
-
+# includes:
+#   - from_url:
+#       url: charmbracelet/meta/main/notarize.yaml
+#
 metadata:
   mod_timestamp: "{{ .CommitTimestamp }}"
   license: "MIT"
@@ -47,8 +47,9 @@ builds:
       - darwin
       - windows
       - freebsd
-      - openbsd
-      - netbsd
+      # TODO: those fail to build
+      # - openbsd
+      # - netbsd
     goarch:
       - amd64
       - arm64
