--- a/.github/workflows/schema-update.yml
+++ b/.github/workflows/schema-update.yml
@@ -8,13 +8,11 @@ on:
 
 jobs:
   update-schema:
-    permissions:
-      contents: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.CRUSH_CLA_BOT }}
       - uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
