ci: openbsd and netbsd
Signed-off-by: Carlos Alexandro Becker <caarlos0@users.noreply.github.com>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -47,9 +47,8 @@ builds:
       - darwin
       - windows
       - freebsd
-      # TODO: those fail to build
-      # - openbsd
-      # - netbsd
+      - openbsd
+      - netbsd
     goarch:
       - amd64
       - arm64
