ci: nur license (#347)
Signed-off-by: Carlos Alexandro Becker <caarlos0@users.noreply.github.com>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -181,6 +181,7 @@ nix:
       owner: "charmbracelet"
       name: nur
       token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
+    license: fsl11Mit
     extra_install: |-
       installManPage ./manpages/crush.1.gz
       installShellCompletion ./completions/*
