ci: better changelog
Signed-off-by: Carlos Alexandro Becker <caarlos0@users.noreply.github.com>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -246,6 +246,7 @@ winget:
 changelog:
   sort: asc
   disable: "{{ .IsNightly }}"
+  use: github
   filters:
     exclude:
       - "^(build|ci): "
