--- a/.github/workflows/issue-labeler.yml
+++ b/.github/workflows/issue-labeler.yml
@@ -5,7 +5,12 @@ on:
     types: [opened]
   pull_request:
     types: [opened]
-  workflow_dispatch: # allows manual triggering
+  workflow_dispatch:
+    inputs:
+      issue-number:
+        description: Issue Number
+        required: true
+        type: string
 
 permissions:
   issues: write
@@ -21,3 +26,4 @@ jobs:
           enable-versioned-regex: 0
           include-title: 1
           repo-token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          issue-number: ${{ github.event.inputs.issue-number || github.event.issue.number || github.event.pull_request.number }}
