ci(issue-labeler): add os labels

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -17,6 +17,12 @@
   - "/theme/i"
 "area: tools":
   - "/tool/i"
+"os: linux":
+  - "/linux/i"
+"os: macos":
+  - "/macos/i"
+"os: windows":
+  - "/windows/i"
 "provider: anthropic / claude":
   - "/anthropic/i"
   - "/claude/i"
