ci(issue-labeler): add docs label

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -2,6 +2,8 @@
   - "/^ci: /i"
 "area: diff":
   - "/diff/i"
+"area: docs":
+  - "/(docs|documentation|readme)/i"
 "area: images":
   - "/image/i"
 "area: lsp":
