chore(issue-labeler): add comment explaining why single entries

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,3 +1,6 @@
+# NOTE(@andreynering): We should have a single entry per label, because if we
+# have multiple the action would only apply the label if ALL of them match.
+
 "area: ci":
   - "/^ci: /i"
 "area: diff":
