ci: update golangci-lint version to v2.4 which supports go 1.25

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,4 +8,5 @@ jobs:
     uses: charmbracelet/meta/.github/workflows/lint.yml@main
     with:
       golangci_path: .golangci.yml
+      golangci_version: v2.4
       timeout: 10m
