ci(issue-labeler): add android label

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -23,6 +23,8 @@
   - "/theme/i"
 "area: tools":
   - "/tool/i"
+"os: android":
+  - "/(android|termux)/i"
 "os: linux":
   - "/linux/i"
 "os: macos":
