fix: Expose Required params to Anthropic API (#752)
* chore: add build task and generates annotations

Added a build task for parity with other task commands.
Used the suggested build command from the README.

Also added "generates" annotations, which is useful as the
Taskfile grows.

Signed-off-by: Evan Wies <evan@neomantra.net>

* fix: expose Required params to Anthropic client

Signed-off-by: Evan Wies <evan@neomantra.net>

* fix: typo in cla.yml  precomment -> prcomment

Signed-off-by: Evan Wies <evan@neomantra.net>

---------

Signed-off-by: Evan Wies <evan@neomantra.net>

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -28,6 +28,13 @@ tasks:
     env:
       GOEXPERIMENT: null
 
+  build:
+    desc: Run build
+    cmds:
+      - go build .
+    generates:
+      - crush
+
   test:
     desc: Run tests
     cmds:
@@ -70,3 +77,5 @@ tasks:
     cmds:
       - go run main.go schema > schema.json
       - echo "Generated schema.json"
+    generates:
+      - schema.json
