--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -210,13 +210,13 @@ nfpms:
     file_name_template: "{{ .ConventionalFileName }}"
     contents:
       - src: ./completions/crush.bash
-        dst: /etc/bash_completion.d/crush
+        dst: '{{ if eq .Format "termux.deb" }}/data/data/com.termux/files{{ end }}/etc/bash_completion.d/crush'
       - src: ./completions/crush.fish
-        dst: /usr/share/fish/vendor_completions.d/crush.fish
+        dst: '{{ if eq .Format "termux.deb" }}/data/data/com.termux/files{{ end }}/usr/share/fish/vendor_completions.d/crush.fish'
       - src: ./completions/crush.zsh
-        dst: /usr/share/zsh/site-functions/_crush
+        dst: '{{ if eq .Format "termux.deb" }}/data/data/com.termux/files{{ end }}/usr/share/zsh/site-functions/_crush'
       - src: ./manpages/crush.1.gz
-        dst: /usr/share/man/man1/crush.1.gz
+        dst: '{{ if eq .Format "termux.deb" }}/data/data/com.termux/files{{ end }}/usr/share/man/man1/crush.1.gz'
     rpm:
       signature:
         key_file: '{{ if ne (index .Env "GPG_KEY_PATH") "" }}{{ .Env.GPG_KEY_PATH }}{{ else }}{{ end }}'
