--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -15,6 +15,8 @@
   - "/mcp/i"
 "area: mouse":
   - "/(mouse|scroll)/i"
+"area: onboarding":
+  - "/(onboarding)/i"
 "area: permissions":
   - "/permission/i"
 "area: session":
