ci(issue-labeler): remove `arch` work from `os: linux` label
It matches regular words too easily: ARCHtecture, seARCH, etc.

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -30,7 +30,7 @@
 "os: android":
   - "/(android|termux)/i"
 "os: linux":
-  - "/(linux|arch|fedora|debian|ubuntu)/i"
+  - "/(linux|fedora|debian|ubuntu)/i"
 "os: macos":
   - "/(macos|osx|darwin)/i"
 "os: windows":
